# ocaml-zbar

./: .gitignore  .merlin  LICENCE  Makefile  _oasis  _tags  myocamlbuild.ml  opam  setup.ml  zbar.opam
classic/: META  libzbar_stubs.clib  zbar.ml  zbar_stubs.c
ctypes/: META  zbar.ml  zbar.mli  zbar.odocl
lib/: META  util.ml  zbar.ml  zbar.mli  zbar.mllib
src/: dune  zbar.ml  zbar.mli  zbar_lwt.ml  zbar_lwt.mli  zbar_stubs.c
test/: dune  test.ml
